# poker

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  build.sh  conanfile.txt
.github/workflows/: docker-build.yml
api/: api.hpp  json.hpp  json_obj.h  val_t.hpp
api/basic/: api-connect.hpp  api-login.hpp  api-register.hpp  api-unlogin.hpp  api-unreg.hpp
api/poker/: api-event_cards_given.hpp  poker-start.hpp
api/rooms/: api-del_room.hpp  api-enter_room.hpp  api-leave_room.hpp  api-list_rooms.hpp  api-new_room.hpp
client/: CMakeLists.txt  input_router.hpp  main.cpp
components/: log.hpp  property.hpp  tracy_include.hpp
service/: CMakeLists.txt  main.cpp
service/coordinator/: coord.hpp
service/db_worker/: db_worker-errors.hpp  db_worker-routes.hpp  db_worker.cpp  db_worker.h
service/dispatcher/: dispatcher-routes.hpp  dispatcher.cpp  dispatcher.h
service/manager/: manager.hpp
service/rest_worker/: rest_worker-routes.hpp  rest_worker.cpp  rest_worker.h
service/room/: room.cpp  room.hpp
service/server/: server-rooms.cpp  server-routes.hpp  server.cpp  server.hpp
service/user/: user.hpp
tests/: CMakeLists.txt
tests/accounts/: CMakeLists.txt  main.cpp
tests/rooms/: CMakeLists.txt  main.cpp
